--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "build": "next build",
-    "db:push": "prisma db push",
+    "db:push": "dotenv -e .env.development.local -- prisma db push",
+    "migrate": "dotenv -e .env.development.local -- npx prisma migrate deploy",
     "db:studio": "prisma studio",
     "dev": "next dev",
     "postinstall": "prisma generate",
@@ -22,6 +23,7 @@
     "@trpc/react-query": "^10.45.1",
     "@trpc/server": "^10.45.1",
     "@vercel/postgres": "^0.7.2",
+    "dotenv-cli": "^7.4.1",
     "next": "^14.1.0",
     "next-auth": "^4.24.6",
     "react": "18.2.0",
